--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   },
   "devDependencies": {
     "@custom-elements-manifest/analyzer": "^0.4.17",
-    "@web/dev-server": "^0.1.28"
+    "@web/dev-server": "^0.1.28",
+    "webpack":"^5.31.0",
+    "webpack-cli":"^4.6.0",
+    "webpack-dev-server":"^3.11.2",
+    "html-webpack-plugin": "^5.3.1"
   },
   "customElements": "custom-elements.json"
 }
