--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "start": "web-dev-server"
   },
   "dependencies": {
+    "@vaadin/router": "^1.7.4",
     "lit": "^2.0.2"
   },
   "devDependencies": {
     "@custom-elements-manifest/analyzer": "^0.4.17",
     "@web/dev-server": "^0.1.28",
-    "webpack":"^5.31.0",
-    "webpack-cli":"^4.6.0",
-    "webpack-dev-server":"^3.11.2",
-    "html-webpack-plugin": "^5.3.1"
+    "html-webpack-plugin": "^5.3.1",
+    "webpack": "^5.31.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "customElements": "custom-elements.json"
 }
